syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/currencies/pb";

message GetSupportedCurrenciesResponse {
  // The 3-letter currency code defined in ISO 4217.
  repeated string currencyCodes = 1;
}
