syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";
import "money.proto";
import "rpc_convert.proto";
import "rpc_get_supported_currencies.proto";

option go_package = "github.com/Arthur199212/microservices-demo/src/currency/pb";

service Currency {
  rpc Convert (ConvertRequest) returns (Money) {}
  rpc GetSupportedCurrencies (google.protobuf.Empty) returns (GetSupportedCurrenciesResponse) {}
}
